erDiagram
    USUARIOS ||--o{ USER_ROLES : "tiene"
    ROLES ||--o{ USER_ROLES : "asignado a"
    USUARIOS ||--o| PERSONAS : "vinculado a (1:1 opcional)"
    SUCURSALES ||--o{ PERSONAS : "ubica"
    SUCURSALES ||--o{ USER_ROLES : "scope opcional"
    ORGANIZACION ||--o{ SUCURSALES : "contiene"
    USUARIOS ||--o{ AUDITORIA : "ejecuta"
    %% (eliminada PERSONAS_ROLES — los roles de dominio se derivan de propietarios/inquilinos)
    PERSONAS ||--o{ PERSONAL : "tiene legajo(s)"
    SUCURSALES ||--o{ PERSONAL : "emplea en"
    PERSONAS ||--o| PROPIETARIOS : "es propietario"
    PERSONAS ||--o| INQUILINOS : "es inquilino"
    PROPIETARIOS ||--o{ PROPIEDADES : "posee"
    PROPIETARIOS ||--o{ CONTRATOS : "firma como propietario"
    INQUILINOS ||--o{ CONTRATOS : "firma como inquilino"
    PROPIEDADES ||--o{ CONTRATOS : "tiene"
    PROPIEDADES }o--|| CONTRATOS : "contrato_activo"
    CONTRATOS ||--o{ LIQUIDACIONES : "genera"
    CONTRATOS ||--o{ EVENTOS_CONTRATO : "registra"
    LIQUIDACIONES ||--o{ CONCEPTOS_LIQUIDACION : "compuesta por"
    LIQUIDACIONES ||--o{ PAGOS : "cancelada con"
    LIQUIDACIONES ||--o{ EVENTOS_CONTRATO : "asociada a"

    PERSONAS {
        uuid id PK
        text nombre
        text dni
        text cuit
        text email
        text telefono
        text direccion
        text observaciones
        uuid sucursal_id
        timestamptz created_at
        timestamptz updated_at
    }
    PROPIETARIOS {
        uuid id PK
        uuid persona_id FK
        text banco
        text cbu
        text alias_cbu
        text condicion_iva
        text observaciones_fiscales
    }
    INQUILINOS {
        uuid id PK
        uuid persona_id FK
        text garante_nombre
        text garante_telefono
        text garante_dni
        text ocupacion
        numeric ingresos_declarados
        text observaciones_inquilino
    }
    %% PERSONAS_ROLES eliminada
    PERSONAL {
        uuid id PK
        uuid persona_id FK
        uuid sucursal_id FK
        date fecha_alta
        text causa_alta
        date fecha_baja
        text causa_baja
        boolean activo
        text observaciones
    }
    PROPIEDADES {
        uuid id PK
        text direccion
        text unidad
        tipo_propiedad tipo
        uuid propietario_id FK
        estado_propiedad estado
        uuid contrato_activo_id FK
        numeric metros
        int ambientes
        numeric latitud
        numeric longitud
        text matricula_catastral
    }
    CONTRATOS {
        uuid id PK
        text codigo
        uuid propiedad_id FK
        uuid propietario_id FK
        uuid inquilino_id FK
        date fecha_inicio
        date fecha_fin
        estado_contrato estado
        numeric alquiler_base
        text tipo_ajuste
        text frecuencia_ajuste
        int dia_vencimiento
        numeric comision_porcentaje
        boolean iva
        text tgi
        text api
        text expensas_ordinarias
        text expensas_extraordinarias
        text seguro
        text servicios
    }
    LIQUIDACIONES {
        uuid id PK
        uuid contrato_id FK
        text periodo
        text periodo_label
        date fecha_emision
        estado_liquidacion estado
        numeric subtotal
        numeric total_cobrar
        numeric total_cobrado
        numeric pendiente
        numeric comision_inmobiliaria
        numeric neto_propietario
        numeric saldo_anterior
    }
    CONCEPTOS_LIQUIDACION {
        uuid id PK
        uuid liquidacion_id FK
        text concepto
        numeric monto
        text responsable
        boolean aplica_al_inquilino
    }
    PAGOS {
        uuid id PK
        uuid liquidacion_id FK
        uuid contrato_id FK
        date fecha
        numeric monto
        medio_pago medio_pago
        text referencia
        estado_pago estado
    }
    EVENTOS_CONTRATO {
        uuid id PK
        uuid contrato_id FK
        uuid liquidacion_id FK
        text periodo
        date fecha
        text tipo
        text categoria
        text descripcion
        numeric monto
        text documento_url
    }
    USUARIOS {
        uuid id PK
        text email
        text nombre
        boolean activo
        uuid persona_id FK
        timestamptz ultimo_login
    }
    ROLES {
        uuid id PK
        app_role codigo
        text nombre
        text descripcion
    }
    USER_ROLES {
        uuid id PK
        uuid user_id FK
        uuid role_id FK
        app_role role
        uuid sucursal_id FK
    }
    ORGANIZACION {
        uuid id PK
        text nombre
        text logo_url
        text cuit
        date fecha_alta
        date fecha_baja
    }
    SUCURSALES {
        uuid id PK
        uuid organizacion_id FK
        text nombre
        boolean es_central
        boolean activa
    }
    AUDITORIA {
        uuid id PK
        uuid user_id FK
        text accion
        text entidad
        uuid entidad_id
        jsonb datos_antes
        jsonb datos_despues
        numeric monto
    }
